Fix character spacing

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,7 +10,7 @@ $text-dark: #f5f5f5;
 }
 
 :root {
-  font-family: "Lucida Console", "Courier New", full-width, monospace;
+  font-family: monospace;
 }
 
 #game {
